Futile attempts to get post processing working
Have some pixelly 3d though

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,18 @@
 body {
   color: green;
+  margin: 0;
+
+  background: black;
+}
+
+#app {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+#app canvas {
+  image-rendering: pixelated;
+  width: 960px !important;
+  height: 960px !important;
 }
