--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,16 +3,22 @@ body {
   margin: 0;
 
   background: black;
+
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
 }
 
 #app {
   display: flex;
-  align-content: center;
+  align-items: center;
   justify-content: center;
+
+  width: 100%;
+  height: 100%;
 }
 
 #app canvas {
   image-rendering: pixelated;
-  width: 960px !important;
-  height: 960px !important;
+  border: 1px solid #222;
 }
